colocando position fixed no cabecalho e tirando o footer do site-wraper

--- a/style.css
+++ b/style.css
@@ -14,11 +14,11 @@ body {
 }
 
 #content-wrap {
-  padding-bottom: 50px;
+  padding-bottom: 100px;
   min-height: 100vh;
   overflow: hidden;
   display: block;
-  position: relative;
+  position: absolute;
 }
 
 .navmenu {
@@ -46,10 +46,17 @@ body {
 }
 
 #cabecalho {
-  background-image: url('img/bg-header.jpg');
   width: 100%;
   margin: 0;
   padding: 0;
+  top: 0;
+  left: 0;
+  position: fixed;
+  z-index: 1;
+}
+
+.hero {
+  background-image: url('img/bg-header.jpg');
   height: 35vh;
   display: flex;
   align-items: center;
@@ -160,7 +167,7 @@ td {
 }
 
 #rodape {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
   height: 50px;
